@@ -34,6 +34,7 @@ var localized_strings,
             options_lowestprice: "Show Price History Information",
             options_metacritic: "Show Metacritic User Scores",
             options_hltb: "Show HowLongToBeat.com Information",
+			options_pcgw: "Show PCGagmingWiki Links",
             options_steamdb: "Show SteamDB Links",
             options_wsgf: "Show WSGF (Widescreen) Info",
             options_carousel_description: "Show App Descriptions On Storefront Carousel",
@@ -59,6 +60,7 @@ var localized_strings,
             saved: "Saved",
             remove: "Remove",
             view_in: "View in",
+			wiki_article: "View __pcgw__ Article",
             clear_cache: "Clear cached data",
             forums: "Forums",
 			games: "Games",
