@@ -584,6 +584,15 @@
 					<div id="store_steamdb_text" class="text">Show SteamDB Links</div>
 				</td>
 			</tr>
+			
+			<tr>
+				<td>
+					<input type="checkbox" id="showpcgw">
+				</td>
+				<td height=30>
+					<div id="store_pcgw_text" class="text">Show PCGamingWiki Links</div>
+				</td>
+			</tr>
 
 			<tr>
 				<td>
